adrian.log
 * Serving Flask app "MongoDemo" (lazy loading)
 * Environment: production
[31m   WARNING: This is a development server. Do not use it in a production deployment.[0m
[2m   Use a production WSGI server instead.[0m
 * Debug mode: on
 * Running on http://10.88.48.21:5000/ (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 950-704-576

10.88.200.11 - - [30/Mar/2021 12:47:26] "[37mGET /rdu HTTP/1.1[0m" 200 -
10.88.200.11 - - [30/Mar/2021 12:49:44] "[37mGET /rdu HTTP/1.1[0m" 200 -
  File "./Mongo.py", line 68
    self.app = flask.Flask(__name))
                                  ^
SyntaxError: invalid syntax
 * Detected change in '/home/adrian/.pyenv/versions/3.6.8/lib/python3.6/site-packages/flask/__init__.py', reloading
 * Serving Flask app "MongoDemo" (lazy loading)
 * Environment: production
[31m   WARNING: This is a development server. Do not use it in a production deployment.[0m
[2m   Use a production WSGI server instead.[0m
 * Debug mode: on
 * Running on http://10.88.48.21:5000/ (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 950-704-576


10.88.200.11 - - [30/Mar/2021 14:24:34] "[37mGET /rdu HTTP/1.1[0m" 200 -
^C * Serving Flask app "Mongo" (lazy loading)
 * Environment: production
[31m   WARNING: This is a development server. Do not use it in a production deployment.[0m
[2m   Use a production WSGI server instead.[0m
 * Debug mode: on
 * Running on http://10.88.48.21:5000/ (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 950-704-576
10.88.200.11 - - [30/Mar/2021 16:48:19] "[37mGET /rdu HTTP/1.1[0m" 200 -
 * Detected change in '/home/adrian/shared_libs/Mongo.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 950-704-576
 * Detected change in '/home/adrian/shared_libs/Mongo.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 950-704-576
 * Detected change in '/home/adrian/shared_libs/Mongo.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 950-704-576
 * Detected change in '/home/adrian/shared_libs/Mongo.py', reloading
 * Restarting with stat
Traceback (most recent call last):
  File "/home/adrian/shared_libs/FlaskAPI.py", line 12, in <module>
    import Mongo
  File "/home/adrian/shared_libs/Mongo.py", line 44
    cmacM.objects.update(**{'set__timestamp__' + str(time.ctime(time.time())))
                                                                             ^
SyntaxError: invalid syntax
 * Serving Flask app "Mongo" (lazy loading)
 * Environment: production
[31m   WARNING: This is a development server. Do not use it in a production deployment.[0m
[2m   Use a production WSGI server instead.[0m
 * Debug mode: on
 * Running on http://10.88.48.21:5000/ (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 950-704-576
10.88.200.11 - - [30/Mar/2021 17:52:14] "[37mGET /rdu HTTP/1.1[0m" 200 -
10.88.200.11 - - [30/Mar/2021 17:52:20] "[37mGET /rdu HTTP/1.1[0m" 200 -
^C
 * Serving Flask app "Mongo" (lazy loading)
 * Environment: production
[31m   WARNING: This is a development server. Do not use it in a production deployment.[0m
[2m   Use a production WSGI server instead.[0m
 * Debug mode: on
 * Running on http://10.88.48.21:5000/ (Press CTRL+C to quit)
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 950-704-576



10.88.200.11 - - [30/Mar/2021 18:57:57] "[37mGET /rdu HTTP/1.1[0m" 200 -
10.88.200.11 - - [30/Mar/2021 19:30:35] "[37mGET /rdu HTTP/1.1[0m" 200 -
 * Detected change in '/home/adrian/shared_libs/Mongo.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 950-704-576
 * Detected change in '/home/adrian/shared_libs/Mongo.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 950-704-576
 * Detected change in '/home/adrian/shared_libs/Mongo.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 950-704-576
 * Detected change in '/home/adrian/shared_libs/Mongo.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 950-704-576
 * Detected change in '/home/adrian/shared_libs/Mongo.py', reloading
 * Restarting with stat
Traceback (most recent call last):
  File "/home/adrian/shared_libs/FlaskAPI.py", line 12, in <module>
    import Mongo; # shared_libs
  File "/home/adrian/shared_libs/Mongo.py", line 60
    def LoadModem(self, data):
    ^
IndentationError: expected an indented block
